--- a/src/App.module.css
+++ b/src/App.module.css
@@ -19,8 +19,8 @@
   color: white;
 }
 
-.link {
-  color: #b318f0;
+/* .link {
+  color: #DB2E2E;
 }
 
 @keyframes logo-spin {
@@ -30,4 +30,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
